--- a/about.html
+++ b/about.html
@@ -50,11 +50,11 @@
     </div>
     <div class="full-list_wrap">
       <div data-w-id="5f4f3695-c24e-197a-9e7b-ec56f870e41f" style="-webkit-transform:translate3d(-30px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-30px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-30px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-30px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="subheading_wrap">
-        <h3 class="white">Turkey</h3>
+        <h3 class="white">Hong Kong</h3>
       </div>
       <div class="list_wrap">
-        <h3 class="heading-8">UI/UX Designer (Contract)</h3>
-        <p class="paragraph-3 white">Meka<br>esent</p>
+        <h3 class="heading-8">UI/UX Designer </h3>
+        <p class="paragraph-3 white">Onebox Creative<br>present</p>
       </div>
       <div class="list_wrap">
         <h3 class="heading-8">Freelance UI/UX Designer</h3>
@@ -117,14 +117,6 @@
       </div>
       <div class="project-divider w-container">
         <div class="divider white_line"></div>
-      </div>
-      <div class="full-list_wrap">
-        <div data-w-id="c8e35333-e75d-fade-2a43-2eb09d0c49ac" style="-webkit-transform:translate3d(-30px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-30px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-30px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-30px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="subheading_wrap">
-          <h3 class="white">Hong Kong Design Institution</h3>
-        </div>
-        <div class="list_wrap">
-          <p class="paragraph-3 white">Hong Kong Design Institution<br>2013-2015</p>
-        </div>
       </div>
       <div class="project-divider w-container">
         <div class="divider white_line"></div>
