--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
       </div>
       <div class="list_wrap">
         <h3 class="heading-8">UI/UX Designer </h3>
-        <p class="paragraph-3 white">Onebox Creative<br>present</p>
+        <p class="paragraph-3 white">Onebox Creative<br>2023-present</p>
       </div>
       <div class="list_wrap">
         <h3 class="heading-8">Freelance UI/UX Designer</h3>
